Hacked together a working version.

--- a/index.html
+++ b/index.html
@@ -56,29 +56,13 @@
           mapTypeId: google.maps.MapTypeId.HYBRID,
           zoom_changed: update_heatmap,
         });
+        map.addListener('idle', update_heatmap);
         map.addListener('dragend', update_heatmap);
         update_heatmap();
 
-        /*var heat_gradient = [
-          'rgba(  0, 255, 255, 0)',
-          'rgba(  0, 255, 255, 1)',
-          'rgba(  0, 191, 255, 1)',
-          'rgba(  0, 127, 255, 1)',
-          'rgba(  0,  63, 255, 1)',
-          'rgba(  0,   0, 255, 1)',
-          'rgba(  0,   0, 223, 1)',
-          'rgba(  0,   0, 191, 1)',
-          'rgba(  0,   0, 159, 1)',
-          'rgba(  0,   0, 127, 1)',
-          'rgba( 63,   0,  91, 1)',
-          'rgba(127,   0,  63, 1)',
-          'rgba(191,   0,  31, 1)',
-          'rgba(255,   0,   0, 1)'
-        ];*/
         var heatmap = new google.maps.visualization.HeatmapLayer({
           data: heatMapData,
           radius: 20,
-          //gradient: heat_gradient,
           map: map
         });
 
