Update Google API changes

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
     </script>
     <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDM6irdE5CKBVVbZOIniJ1ulWEJIK44FfY&libraries=visualization&callback=initMap">
+        src="https://www.google.com/maps/embed/v1/view?key=AIzaSyDM6irdE5CKBVVbZOIniJ1ulWEJIK44FfY&libraries=visualization&callback=initMap">
     </script>
   </body>
 </html>
